# ChangeLog for dev-dotnet/nant
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/nant/ChangeLog,v 1.22 2009/05/03 20:29:38 loki_val Exp $

*nant-0.86_beta1 (03 May 2009)

  03 May 2009; Peter Alfredsen <loki_val@gentoo.org>
  +files/nant-0.86_beta1-build.patch,
  +files/nant-0.86_beta1-dropnunit1.patch,
  +files/nant-0.86_beta1-nunit-2.4.8.patch,
  +files/nant-0.86_beta1-refmono-nunit.patch, metadata.xml,
  +nant-0.86_beta1.ebuild:
  Bump. USE=bootstrap introduced, allows linking against system libs when
  unset.

  27 Nov 2008; <ssuominen@gentoo.org> nant-0.85.ebuild:
  Move dev-util/pkgconfig from RDEPEND to DEPEND wrt #224301.

  01 Jun 2008; Jurek Bartuszek <jurek@gentoo.org>
  files/nant-0.85-obselencense.patch, nant-0.85.ebuild:
  Fixed mono-1.9 compatibility issues - removed usage of deprecated method
  (bug #218613)

  30 May 2008; Jurek Bartuszek <jurek@gentoo.org> nant-0.85.ebuild:
  Added dev-util/pkgconfig dependency (bug #216416)

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Peter Johanson (latexer, #206688) from metadata.xml.

  31 Dec 2007; Jurek Bartuszek <jurek@gentoo.org>
  +files/nant-0.85-threadingfix.patch, nant-0.85.ebuild:
  Fixed threading issue (bug #199748)

  10 Aug 2007; Steve Dibb <beandog@gentoo.org> nant-0.85.ebuild:
  amd64 stable, bug 186686

  29 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org> nant-0.85.ebuild:
  ppc stable, bug #186686

  27 Jul 2007; Christian Faulhammer <opfer@gentoo.org> nant-0.85.ebuild:
  stable x86, bug 186686

  24 Feb 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  -files/nant-0.85-rc2-is-unix.diff, -files/nant-0.85-rc2-profile.diff,
  -files/nant-0.85-rc3-mono-1.1.7-compat.diff,
  -files/nant-0.85_rc3-assignfix.diff, -nant-0.85_rc3.ebuild,
  -nant-0.85_rc3-r1.ebuild:
  prune old versions

  24 Feb 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/nant-0.85-obselencense.patch, nant-0.85.ebuild: