@@ -5,9 +5,8 @@ AUX nant-0.86_beta1-dropnunit1.patch 2254 RMD160 cd4b2e063d54ef5018436acda539b32
 AUX nant-0.86_beta1-nunit-2.4.8.patch 4751 RMD160 579f714a8a7fb859a20ebb05d9439ac88f9c4f04 SHA1 0e45cc59fe5cf72fa725af5ce7ad0c61dcdf446a SHA256 6c2113b29c374edc22005dd3bcad58b4bf3fee3d0b4eb28100cf6a7858d393cb
 AUX nant-0.86_beta1-refmono-nunit.patch 1815 RMD160 89fb4e23c743a5ec445c298d661c2374a2cd480a SHA1 90d6b5f00cb4ef299eefabbc70a336cfd8c5f8d8 SHA256 04c5bc761809ca7ab972b28a160a0926ec5eec9ed8d98a98f09d44287b5116cf
 DIST nant-0.85-src.tar.gz 2130856 RMD160 0d69f4f49305fecbd17c4b6e9cdc29a0bc5cc8fd SHA1 df97d7b542a4e561c37a0804bb8a159803cc05cd SHA256 f50fbcba5ea3819ecafab9631c8937460e2b8b04d65c435c71fef7220c5cfc7d
-DIST nant-0.86-beta1-bin.tar.gz 3504301 RMD160 4b5b4ab869e762c57802a8d2f783855f6cb636cb SHA1 e74f6674f0fabad6d90df91c46a3ec26e37565b6 SHA256 2ab0826b11d8ae98eadffe6afa048f49ec8aa0cf1d7b85c78824b51f1a33107e
 DIST nant-0.86-beta1-src.tar.gz 2187213 RMD160 96343c30403bb740e52d51688c855738a8021bbf SHA1 9f91381b9c54459c5cc56e31e4645e470a3cbe9b SHA256 bf9c245b20ffe6a2a44814fa0a0a79a3d67b4c04b74218b899b430975b4f0dbd
 EBUILD nant-0.85.ebuild 1587 RMD160 103b9b3ca80478c121ad228c9979b820bc235a0d SHA1 fc2ad910f679ef2b11176d393b44b5f40428ff18 SHA256 85d3f261cf10e6a5ec488561621bb9b948d8daeb919940016c46b0c0ef70eed8
-EBUILD nant-0.86_beta1.ebuild 2679 RMD160 5688138873301059aafa753cf0d727a0ddcabf79 SHA1 2b2356dc6d298556bca2abdbd4f33403d4263a67 SHA256 ae5cf4a08e7a7128ac1b0b2901caf88b8ed646b4f81d0a5fd15aea217137ab8e
-MISC ChangeLog 3916 RMD160 a0e0e651b482076ddb63168eff94cd8b6fe6b1fa SHA1 21816aa790eee445b7cefcfbd45258e17d15b539 SHA256 9fc6aa70bd134c3d5a6b0b49119c2e1dc455c9a622068335d4e7747d510e4dd5
+EBUILD nant-0.86_beta1.ebuild 2621 RMD160 e74bfb46e3897e87c557bdd66a7a6517875c4c4b SHA1 5333776daa7cdd44e7b5c0811adbdfd3277eaae5 SHA256 98d38ac0242839a66f9cc0bf6291578afe0c45db53034688573e27379242008f
+MISC ChangeLog 4043 RMD160 1c146e9c63f8ad6c586c1276e56dfafa7ffe6cf5 SHA1 a710e5db92460bec00d8bce9a63e4ad85802dbe4 SHA256 0be5fb4ecfd07baa3c1982c1864578995bc1777652fef2661e9595481bf5ef25
 MISC metadata.xml 256 RMD160 fc20ccc5bd854bd1ead2492bc41154fd06f4c53f SHA1 71dfa174959b1036430bf3addb077ec978d1aeac SHA256 4587013c7194cc4f71d6fa48875d02d0bebcf1e064ff2e453f58d3080ffa2f5c
